--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-@Library('Shared-library@main') _
+@Library('Shared-library@master') _
 
 pipeline {
   agent any 
@@ -15,7 +15,7 @@ pipeline {
 		stage('Checkout') {
 			steps {
 			 gitclone(
-				branch: "main",
+				branch: "master",
 				url: "https://github.com/ullas621988/CaseStudy.git"
 				)
 			}
